--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>DragonVale2133</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -126,26 +126,32 @@ body {
   <a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a>
 </div>
 <div class="navbar">
-  <a href="#Explore">Explore</a>
-  <a href="#Guides">Guides</a>
-  <a href="#Blog">Blog</a>
+  <a href="/Explore.html">Explore</a>
+  <a href="/Guides.html">Guides</a>
+  <a href="/Blog.html">Blog</a>
   </div>
 <div class="row">
   <div class="side">
     <h2 style="color: green">Welcome!</h2>
-    <p>I created this website to host my horse stories. Here I also post on my blog, where I talk about VoU updates.<br>Originally I used Weebly to make my original site, but I suspect that I may run out of bandwidth soon on there, so I moved to this.</p>
-    <img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus.">
+    <p>I created this website to host my horse stories. Here I also post on my blog, where I talk about VoU updates.<br>Originally I used Weebly to make my original site, but I suspect that I may run out of bandwidth soon on there, so I moved to this new site I coded with HTML.</p>
+    <img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus."><br><br>
+    <p style="color: red; text-align: center;"><strong>This site is a work-in-progress. Not all elements will function.       </strong></p>
   </div>
   <div class="main">
     <div class="border">
       <h2>Explore...</h2>
-      <p class="lol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at ultricies dolor, ut pretium quam. Curabitur tempor vel purus sed convallis. Integer augue risus, mattis ut semper id, pellentesque quis erat. Proin vulputate consequat metus et pulvinar. Quisque ut iaculis orci. Nullam pharetra mattis laoreet. Integer malesuada ut magna non eleifend. Nam porttitor dui in magna auctor facilisis ut quis dui. Ut in purus nunc. <a href="#" style="color: green">Start venturing!</a></p>
+      <p class="lol">The Valley is a vast and mysterious land, populated with many mythological creatures such as Unicorns, Phoenixes, Dragons and more. While the isolated area is still riddled with quite a few mysteries, Horse Keepers like to collect the various creatures of the Valley for their looks and to uncover what is in the valley. But not every part of the place has been properly explored and uncovered. <a href="#" style="color: green">Start venturing!</a></p>
       <img src="http://valleyofunicorns.com/images/horse_images/503.png" style="position: absolute; width: 200px; right: 10px; top: 250px ; position: absolute">
     </div>
     <div class="border">
-      <h2>Guides</h2>
-      <p class="lol" style="max-height: 40px;">Need to know when a Hippocampus grows up or you don't even know where to where to shtart out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans.<br><br><em>PLANNED: Archive feature with every color and spreadsheet</em></p>
+      <h2>Guides!</h2>
+      <p class="lol" style="max-height: 40px;">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! Guides include a species reference sheet and a checklist for every color in the game.
+      <a href="#" style="color: green">View list of guides</a><br><br></p>
       <img src="http://valleyofunicorns.com/images/horse_images/811_ad.png" style="position: absolute; width: 200px; right: 5px; top: 500px;">
+      </div>
+      <h2>Blog</h2>
+      <div style="padding-bottom: 20px; min-height: 220px">
+      <p class="lol" style="max-height: 40px; padding-bottom: 20px">Want to know about the latest VoU news and catch the latest updates on the various stories on this website, or just VoU stuff in general? I cover many things VoU-related in my blog, some personal like my various hoards and auctions and some general things such as updates on the game and new colors.  <a href="#" style="color: green">Take a look at the blog</a></p><img src="http://valleyofunicorns.com/images/horse_images/26.png" style="position: absolute; width: 200px; right: 5px; top: 760px;">
       </div>
   </div>
 </div>
