--- a/index.html
+++ b/index.html
@@ -76,16 +76,15 @@ body {
     color: white;
 }
 .profile {
-  position: absolute;
-  right: 15px;
-  top: 30px;
-}
-.lol {
+  float: right;
+  position: relative;
+  bottom: 30px;
+  left: 5px;
 }
 .border {
   border-bottom: 3px solid lightgrey; 
   padding-bottom: 20px; 
-  min-height: 250px
+  min-height: 200px
 }
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
@@ -103,9 +102,9 @@ body {
 </style>
 </head>
 <body>
+
 <div class="header">
-  <h1>DragonVale2133</h1>
-  <a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a>
+  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a>DragonVale2133</h1>
 </div>
 <div class="navbar">
   <a href="/Explore.html">Explore</a>
@@ -116,7 +115,7 @@ body {
   <div class="side">
     <h2 style="color: green">Welcome!</h2>
     <p>I created this website to host my horse stories. Here I also post on my blog, where I talk about VoU updates.<br>Originally I used Weebly to make my original site, but I suspect that I may run out of bandwidth soon on there, so I moved to this new site I coded with HTML.</p>
-    <center><img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus."></center><br><br>
+    <center><img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus."></center><br><br>http://www.valleyofunicorns.com/Player/17640/
     <p style="color: red; text-align: center;"><strong>This site is a work-in-progress. Not all elements will function.       </strong></p>
   </div>
   <div class="main">
@@ -126,12 +125,11 @@ body {
     </div>
     <div class="border">
       <h2><img src="http://valleyofunicorns.com/images/horse_images/811_ad.png" style="float: right; width: 200px;">Guides!</h2>
-      <p class="lol" style="max-height: 40px;">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! Guides include a species reference sheet and a checklist for every color in the game.
-      <a href="#" style="color: green">View list of guides</a><br><br></p>
+      <p class="lol">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! <a href="#" style="color: green">View list of guides</a><br><br></p>
       </div>
+    <div class= "border">
       <h2><img src="http://valleyofunicorns.com/images/horse_images/26.png" style="float: right; width: 200px;">Blog</h2>
-      <div style="padding-bottom: 20px; min-height: 220px">
-      <p class="lol" style="max-height: 40px; padding-bottom: 20px">Want to know about the latest VoU news and catch the latest updates on the various stories on this website, or just VoU stuff in general? I cover many things VoU-related in my blog, some personal like my various hoards and auctions and some general things such as updates on the game and new colors.  <a href="#" style="color: green">Take a look at the blog</a></p>
+      <p class="lol" style="padding-bottom: 50px">Want to know about the latest VoU news and catch the latest updates on the various stories on this website, or just VoU stuff in general? I cover many things VoU-related in my blog, some personal like my various hoards and auctions and some general things such as updates on the game and new colors.  <a href="#" style="color: green">Take a look at the blog</a></p>
       </div>
   </div>
 </div>
