--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ body {
     </div>
     <div class="border">
       <h2><img src="http://valleyofunicorns.com/images/horse_images/811_ad.png" style="float: right; width: 200px;">Guides!</h2>
-      <p class="lol">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! <a href="#" style="color: green">View list of guides</a><br><br></p>
+      <p class="lol">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! <a href="/guides.html" style="color: green">View list of guides</a><br><br></p>
       </div>
     <div class= "border">
       <h2><img src="http://valleyofunicorns.com/images/horse_images/26.png" style="float: right; width: 200px;">Blog</h2>
