--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 /* Main column */
 .main {   
     -ms-flex: 65%; /* IE10 */
-    flex: 65%;
+    flex: 55%;
     background-color: white;
     padding: 20px;
 }
@@ -83,7 +83,7 @@ body {
 }
 .border {
   border-bottom: 3px solid lightgrey; 
-  padding-bottom: 40px; 
+  padding-bottom: 20px; 
   min-height: 200px
 }
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -99,6 +99,12 @@ body {
         width: 100%;
     }
 }
+
+.idk_lol {
+  float: right; 
+  width: 200px;
+  position: relative;
+  bottom: 15px;
 </style>
 </head>
 <body>
@@ -115,20 +121,20 @@ body {
   <div class="side">
     <h2 style="color: green">Welcome!</h2>
     <p>I created this website to host my horse stories. Here I also post on my blog, where I talk about VoU updates.<br>Originally I used Weebly to make my original site, but I suspect that I may run out of bandwidth soon on there, so I moved to this new site I coded with HTML.</p>
-    <center><img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus."></center><br><br>http://www.valleyofunicorns.com/Player/17640/
+    <center><img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus."></center><br><br>
     <p style="color: red; text-align: center;"><strong>This site is a work-in-progress. Not all elements will function.       </strong></p>
   </div>
   <div class="main">
     <div class="border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/503.png" style="float: right; width: 200px;">Explore...</h2>
+      <h2><img src="http://valleyofunicorns.com/images/horse_images/503.png" class="idk_lol">Explore...</h2>
       <p class="lol">The Valley is a vast and mysterious land, populated with many mythological creatures such as Unicorns, Phoenixes, Dragons and more. While the isolated area is still riddled with quite a few mysteries, Horse Keepers like to collect the various creatures of the Valley for their looks and to uncover what is in the valley. But not every part of the place has been properly explored and uncovered. <a href="#" style="color: green">Start venturing!</a></p>
     </div>
     <div class="border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/811_ad.png" style="float: right; width: 200px;">Guides!</h2>
+      <h2><img src="http://valleyofunicorns.com/images/horse_images/811_ad.png" class="idk_lol">Guides!</h2>
       <p class="lol">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! <a href="/guides.html" style="color: green">View list of guides</a><br><br></p>
       </div>
     <div class= "border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/26.png" style="float: right; width: 200px;">Blog</h2>
+      <h2><img src="http://valleyofunicorns.com/images/horse_images/26.png" class="idk_lol">Blog</h2>
       <p class="lol" style="padding-bottom: 50px">Want to know about the latest VoU news and catch the latest updates on the various stories on this website, or just VoU stuff in general? I cover many things VoU-related in my blog, some personal like my various hoards and auctions and some general things such as updates on the game and new colors.  <a href="#" style="color: green">Take a look at the blog</a></p>
       </div>
   </div>
