--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ body {
 </div>
 <div class="navbar">
   <a href="/Explore.html">Explore</a>
-  <a href="/Guides.html">Guides</a>
-  <a href="/Blog.html">Blog</a>
+  <a href="/guides.html">Guides</a>
+  <a href="/blog.html">Blog</a>
   </div>
 <div class="row">
   <div class="side">
