--- a/guides.html
+++ b/guides.html
@@ -101,9 +101,16 @@ body {
 }
 .idk_lol {
   float: right; 
-  width: 200px;
   position: relative;
   bottom: 15px;
+  }
+.normal {
+
+}
+a {
+  color: green;
+  text-decoration: none;
+}
 </style>
 </head>
 <body>
@@ -117,23 +124,26 @@ body {
   </div>
 <div class="row">
   <div class="side">
-    <h2 style="color: green">Welcome!</h2>
-    <p>I created this website to host my horse stories. Here I also post on my blog, where I talk about VoU updates.<br>Originally I used Weebly to make my original site, but I suspect that I may run out of bandwidth soon on there, so I moved to this new site I coded with HTML.</p>
-    <center><img src="http://valleyofunicorns.com/images/horse_images/806.png" alt="Here is a Capricorn Hippocampus."></center><br><br>
-    <p style="color: red; text-align: center;"><strong>This site is a work-in-progress. Not all elements will function.       </strong></p>
+    <h2 style="color: green">A list of Guides</h2>
+    <p style="color: darkgreen"><strong>Features</strong></p>
+    <ul>
+    <li><a href="/treasurebox/general">Treasure Box (+Outcomes)</a></li>
+    </ul><br>
+    <p style="color: darkgreen"><strong>Events</strong></p>
+    <ul>
+    <li>Birthday Bash (Anniversary/May)</li>
+    <li>Summer Cup (July)</li>
+    </ul>
+    <center><img src="http://valleyofunicorns.com/images/horse_images/617.png" alt="Here is a Morning Glory Paae."></center><br><br>
   </div>
   <div class="main">
-    <div class="border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/503.png" class="idk_lol">Explore...</h2>
-      <p class="lol">The Valley is a vast and mysterious land, populated with many mythological creatures such as Unicorns, Phoenixes, Dragons and more. While the isolated area is still riddled with quite a few mysteries, Horse Keepers like to collect the various creatures of the Valley for their looks and to uncover what is in the valley. But not every part of the place has been properly explored and uncovered. <a href="#" style="color: green">Start venturing!</a></p>
-    </div>
-    <div class="border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/811_ad.png" class="idk_lol">Guides!</h2>
-      <p class="lol">Need to know when a Hippocampus grows up or you don't even know where to where to start out? Well, you're in luck, because on this site I compile useful guides for new players or also veterans. Come take a look! <a href="/guides.html" style="color: green">View list of guides</a><br><br></p>
-      </div>
     <div class= "border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/26.png" class="idk_lol">Blog</h2>
-      <p class="lol" style="padding-bottom: 50px">Want to know about the latest VoU news and catch the latest updates on the various stories on this website, or just VoU stuff in general? I cover many things VoU-related in my blog, some personal like my various hoards and auctions and some general things such as updates on the game and new colors.  <a href="#" style="color: green">Take a look at the blog</a></p>
+      <h2><img src="" class="idk_lol">Guides and more</h2>
+      <p class="lol">I've compiled a few helpful guides and lists of colors that are and were available on certain events, as well as how to get the most out of an event. <em>All guides</em> can be found on the left, while relevant ones remain on the main column here.</p>
+      </div>
+          <div class= "border">
+      <h2><img src="http://valleyofunicorns.com/images/treasure_chest.png" class="idk_lol">Treasure Box and it's outcomes</h2>
+      <p class="lol" style="padding-bottom: 50px">What are Treasure Boxes and how can I get one? What are the contents? This page contains everything you need to know about this new feature. <a href="/treasurebox/general" style="color: green">See guide ></a></p>
       </div>
   </div>
 </div>
