--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ body {
     font-family: Arial;
     margin: 0;
 }
+a {
+    text-decoration: none;
+}
 .header {
     padding: 30px;
     text-align: left;
