--- a/guides.html
+++ b/guides.html
@@ -108,9 +108,11 @@ body {
 
 }
 a {
-  color: green;
   text-decoration: none;
 }
+.green a {
+  color: green;
+    }
 </style>
 </head>
 <body>
@@ -126,11 +128,11 @@ a {
   <div class="side">
     <h2 style="color: green">A list of Guides</h2>
     <p style="color: darkgreen"><strong>Features</strong></p>
-    <ul>
+    <ul class="green">
     <li><a href="/treasurebox/general">Treasure Box (+Outcomes)</a></li>
     </ul><br>
     <p style="color: darkgreen"><strong>Events</strong></p>
-    <ul>
+    <ul class="green">
     <li>Birthday Bash (Anniversary/May)</li>
     <li>Summer Cup (July)</li>
     </ul>
