--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ a {
 <body>
 
 <div class="header">
-  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a><a href="/index.html">DragonVale2133</a></h1>
+  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a><a href="/index.html" style="color: white;">DragonVale2133</a></h1>
 </div>
 <div class="navbar">
   <a href="/Explore.html">Explore</a>
