--- a/guides.html
+++ b/guides.html
@@ -117,7 +117,7 @@ a {
 </head>
 <body>
 <div class="header">
-  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile" style="color: white;"></a>DragonVale2133</h1>
+  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a><a href="/index.html" style="color: white;">DragonVale2133</a></h1>
 </div>
 <div class="navbar">
   <a href="/Explore.html">Explore</a>
