--- a/guides.html
+++ b/guides.html
@@ -145,7 +145,7 @@ a {
       </div>
           <div class= "border">
       <h2><img src="http://valleyofunicorns.com/images/treasure_chest.png" class="idk_lol">Treasure Box and it's outcomes</h2>
-      <p class="lol" style="padding-bottom: 50px">What are Treasure Boxes and how can I get one? What are the contents? This page contains everything you need to know about this new feature. <a href="/treasurebox/general" style="color: green">See guide ></a></p>
+      <p class="lol" style="padding-bottom: 50px">What are Treasure Boxes and how can I get one? What are the contents? This page contains everything you need to know about this new feature. <a href="/treasurebox/general.html" style="color: green">See guide ></a></p>
       </div>
   </div>
 </div>
