--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
                     window.location.replace('guides.html');
                     break;
                 default://no keyword detected so we submit the form.
-                    return true;
+                    return false;
                     break;
             }
             return false;//don't let the form submit
