--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
                     window.location.replace('guides.html');
                     break;
                 default://no keyword detected so we submit the form.
-                    value="Wrong. Try again."
+                    document.getElementById("query").value = "Wrong. Try again.";
                     return false;
                     break;
             }
