--- a/test.html
+++ b/test.html
@@ -17,7 +17,10 @@
                     window.location.replace('guides.html');
                     break;
                 default://no keyword detected so we submit the form.
-                    document.getElementById("query").value = "Wrong. Try again.";
+                    document.getElementById("query").value = "Wrong. Try again." columns="2" 
+autocomplete="off" delay="1500"  
+onfocus="if(this.value==this.defaultValue)this.value=''" 
+onblur="if(this.value=='')this.value=this.defaultValue";
                     return false;
                     break;
             }
