--- a/test.html
+++ b/test.html
@@ -8,19 +8,19 @@
            //look for text inside the NEW textbox
            var input = document.getElementById('query').value.toLowerCase();
             switch(input) {
-                case 'Green':
-                   //put this to see if this code runs 
-                   //alert("Test");// UNCOMMENT THIS
-                    window.location.replace('page1.html');
-                    break;
-                case '1':
+                case 'Anmei':
                     window.location.replace('guides.html');
                     break;
+                case 'Wrong. Try again.':
+                    document.getElementById("query").value = "Are you even trying?";
+                    return false;
+                    break;
+                case 'Are you even trying?':
+                    document.getElementById("query").value = "Just stop it.";
+                    return false;
+                    break;
                 default://no keyword detected so we submit the form.
-                    document.getElementById("query").value = "Wrong. Try again." columns="2" 
-autocomplete="off" delay="1500"  
-onfocus="if(this.value==this.defaultValue)this.value=''" 
-onblur="if(this.value=='')this.value=this.defaultValue";
+                    document.getElementById("query").value = "Wrong. Try again." onfocus="if(this.value==this.defaultValue)this.value=''" ;
                     return false;
                     break;
             }
