--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
                     return false;
                     break;
                 default://no keyword detected so we submit the form.
-                    document.getElementById("query").value = "Wrong. Try again." onfocus="if(this.value==this.defaultValue)this.value=''" ;
+                    document.getElementById("query").value = "Wrong. Try again.";
                     return false;
                     break;
             }
