--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
                     window.location.replace('guides.html');
                     break;
                 default://no keyword detected so we submit the form.
-                    document.getElementById("query").value = "Wrong. Try again.";
+                    document.getElementById("query").value = "";
                     return false;
                     break;
             }
