--- a/test.html
+++ b/test.html
@@ -9,13 +9,11 @@
            var input = document.getElementById('query').value.toLowerCase();
             switch(input) {
                 case 'Anmei':
-                   //put this to see if this code runs 
-                   //alert("Test");// UNCOMMENT THIS
                     window.location.replace('guides.html');
                     break;
                 default://no keyword detected so we submit the form.
-                  document.getElementById("query").value = "";
-                    return true;
+                    document.getElementById("query").value = "";
+                    return false;
                     break;
             }
             return false;//don't let the form submit
@@ -28,7 +26,7 @@
                               onsubmit='return redirect();'>
 <!-- pretty much the same thing except you remove the return false  !-->
 <input type="text" name="query" id="query"  value="Enter your answer..." columns="2" 
-autocomplete="off" delay="1500"  
+autocomplete="off" delay="1500"   
 onfocus="if(this.value==this.defaultValue)this.value=''" 
 onblur="if(this.value=='')this.value=this.defaultValue" >
 <input type="submit" value=">" id="submit">
