--- a/treasurebox/general.html
+++ b/treasurebox/general.html
@@ -104,6 +104,10 @@ body {
   width: 200px;
   position: relative;
   bottom: 15px;
+    }
+a {
+    text-decoration: none;
+}
 </style>
 </head>
 <body>
