--- a/treasurebox/general.html
+++ b/treasurebox/general.html
@@ -82,7 +82,7 @@ body {
   left: 5px;
 }
 .border {
-  border-bottom: 3px solid lightgrey; 
+  border-bottom: 3px solid white; 
   padding-bottom: 20px; 
   min-height: 200px
 }
@@ -101,18 +101,22 @@ body {
 }
 .idk_lol {
   float: right; 
-  width: 200px;
   position: relative;
   bottom: 15px;
-    }
-a {
-    text-decoration: none;
+  }
+.normal {
 }
+a {
+  text-decoration: none;
+}
+.green a {
+  color: green;
+    }
 </style>
 </head>
 <body>
 <div class="header">
-  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a><a href="/index.html" style="color: white;">DragonVale2133</A></h1>
+  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a><a href="/index.html" style="color: white;">DragonVale2133</a></h1>
 </div>
 <div class="navbar">
   <a href="/Explore.html">Explore</a>
@@ -121,16 +125,165 @@ a {
   </div>
 <div class="row">
   <div class="side">
-    <h2 style="color: green">Welcome!</h2>
-    <p>I created this website to host my horse stories. Here I also post on my blog, where I talk about VoU updates.<br>Originally I used Weebly to make my original site, but I suspect that I may run out of bandwidth soon on there, so I moved to this new site I coded with HTML.</p>
+    <p class= "green"><a href="/guides.html">< Back</a></p>
+    <h2 style="color: green">Treasure Boxes</h2>
+    <p style="color: darkgreen"><strong>General</strong></p>https://www.w3schools.com/guides.html
+    <ul class="green">
+    <li><a href="/treasurebox/general.html">Treasure Box (+Outcomes)</a></li>
+    </ul><br>
+    <p style="color: darkgreen"><strong>Rotated Outcomes</strong></p>
+    <ul class="green">
+    <li>June 10th - ???</li>
+    </ul>
     <center><img src="http://valleyofunicorns.com/images/horse_images/617.png" alt="Here is a Morning Glory Paae."></center><br><br>
-    <p style="color: red; text-align: center;"><strong>This site is a work-in-progress. Not all elements will function.       </strong></p>
   </div>
   <div class="main">
     <div class= "border">
-      <h2><img src="http://valleyofunicorns.com/images/horse_images/26.png" class="idk_lol">Blog</h2>
-      <p class="lol" style="padding-bottom: 50px">Want to know about the latest VoU news and catch the latest updates on the various stories on this website, or just VoU stuff in general? I cover many things VoU-related in my blog, some personal like my various hoards and auctions and some general things such as updates on the game and new colors.  <a href="#" style="color: green">Take a look at the blog</a></p>
-      </div>
+      <h2><img src="" class="idk_lol">The Outcomes - 10th of June</h2>
+      <p class="lol">The first Treasure Box includes three new Color Purity colors (Cryo Crystal, Enthused and Toxic), as well as a new Fenrir version (V1) and plentiful new Fenrirs, too. Many silver customs by Infernette can also be found within a box.<br><br>
+Despite the Toxic Paaefarin having it's own foal art, the others, including the Heraldic Unicorns, do not.
+<br><br>
+Adults are listed before the EYs.<br><br>
+<span style="color: red"><strong>NOTICE:</strong> This is still being updated with new EYs and outcomes, which means this list isn't 100% complete yet. Please understand!</span><br><br></p>
+<p>
+<strong>Cryo Crystal equines</strong><br>
+<a href="http://valleyofunicorns.com//Horse/5472259/oE3WWX">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472259" alt="5472259"></a>
+<a href="http://valleyofunicorns.com/Horse/5472253/3e7XnX">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472253" alt="5472253"></a>
+<a href="http://valleyofunicorns.com/Horse/5472331/LozvUT">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472331" alt="5472331"></a>
+<a href="http://valleyofunicorns.com/Horse/5472242/ZCI7wO">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472242" alt="5472242"></a>
+<a href="http://valleyofunicorns.com/Horse/5472794/IT9JBm">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472794" alt="5472794"></a>
+<a href="http://valleyofunicorns.com/Horse/5472607/4xrrRb">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472607" alt="5472607"></a>
+<a href="http://valleyofunicorns.com/Horse/5472261/7HyCFg">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472261" alt="5472261"></a>
+<a href="http://valleyofunicorns.com/Horse/5472949/6OwP6T">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472949" alt="5472949"></a>
+<a href="http://valleyofunicorns.com/Horse/5472323/8Wkq7d">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472323" alt="5472323"></a>
+<a href="http://valleyofunicorns.com/Horse/5472246/HUSjsa">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472246" alt="5472246"></a>
+<a href="http://valleyofunicorns.com/Horse/5472855/0QvuzL">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472855" alt="5472855"></a>
+</p><br>
+<p>
+<strong>Enthused equines</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5472262/KsOYY5">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472262" alt="5472262"></a>
+<a href="http://valleyofunicorns.com/Horse/5472255/9swXPC">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472255" alt="5472255"></a>
+<a href="http://valleyofunicorns.com/Horse/5472901/XEaJE4">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472901" alt="5472901"></a>
+<a href="http://valleyofunicorns.com/Horse/5472549/70RDyf">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472549" alt="5472549"></a>
+<a href="http://valleyofunicorns.com/Horse/5472330/paMTiH">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472330" alt="5472330"></a>
+<a href="http://valleyofunicorns.com/Horse/5472289/nMJjCd">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472289" alt="5472289"></a>
+<a href="http://valleyofunicorns.com/Horse/5472451/umc8Vx">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472451" alt="5472451"></a>
+<a href="http://valleyofunicorns.com/Horse/5472381/62WQQW">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472381" alt="5472381"></a>
+</p><br>
+<p>
+<strong>Toxic equines</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5472328/aRaiie">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472328" alt="5472328"></a>
+<a href="http://valleyofunicorns.com/Horse/5472626/iyFJae">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472626" alt="5472626"></a>
+<a href="http://valleyofunicorns.com/Horse/5472237/4spGLs">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472237" alt="5472237"></a>
+<a href="http://valleyofunicorns.com/Horse/5473184/EUyFT5">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5473184" alt="5473184"></a>
+<a href="http://valleyofunicorns.com/Horse/5472904/JaD2Es">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472904" alt="5472904"></a>
+<a href="http://valleyofunicorns.com/Horse/5472853/zpA4zO">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472853" alt="5472853"></a>
+<a href="http://valleyofunicorns.com/Horse/5472948/SFJSy3">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472948" alt="5472948"></a>
+<a href="http://valleyofunicorns.com/Horse/5472327/SuoqYv">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472327" alt="5472327"></a>
+<a href="http://valleyofunicorns.com/Horse/5472270/aj3zOF">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472270" alt="5472270"></a>
+</p><br>
+<p><strong>Celestial Rainbow creatures</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5472953/amdiro">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472953" alt="5472953"></a>
+<a href="http://valleyofunicorns.com/Horse/5473325/3To1Qk">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5473325" alt="5473325"></a>
+<a href="http://valleyofunicorns.com/Horse/5472256/5dot7L">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472256" alt="5472256"></a>
+</p><br>
+<p><strong>Prism creatures</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5472600/ZD7ZzV">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472600" alt="5472600"></a>
+<a href="http://valleyofunicorns.com/Horse/5472480/ykARkB">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472480" alt="5472480"></a>
+<a href="http://valleyofunicorns.com/Horse/5472326/g3k5qS">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472326" alt="5472326"></a>
+<a href="http://valleyofunicorns.com/Horse/5472482/gHVeBF">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472482" alt="5472482"></a>
+<a href="http://valleyofunicorns.com/Horse/5472588/IvqDAr">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472588" alt="5472588"></a>
+</p><br>
+<p><strong>Fenrirs</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5472329/Tgl8UX">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472329" alt="5472329"></a>
+<a href="http://valleyofunicorns.com/Horse/5473183/e3rW3p">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5473183" alt="5473183"></a>
+<a href="http://valleyofunicorns.com/Horse/5472251/q162Je">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472251" alt="5472251"></a>
+<a href="http://valleyofunicorns.com/Horse/5473946/9oRpzp">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5473946" alt="5473946"></a>
+<a href="http://valleyofunicorns.com/Horse/5472481/8DpwlM">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472481" alt="5472481"></a>
+<a href="http://valleyofunicorns.com/Horse/5472624/nKCH0i">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472624" alt="5472624"></a>
+<a href="http://valleyofunicorns.com/Horse/5472287/21ZCDi">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472287" alt="5472287"></a>
+<a href="http://valleyofunicorns.com/Horse/5472268/uj4UYC">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472268" alt="5472268"></a>
+<a href="http://valleyofunicorns.com/Horse/5472324/W0tF97">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472324" alt="5472324"></a>
+<a href="http://valleyofunicorns.com/Horse/5472293/FBdelK">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472293" alt="5472293"></a>
+</p><br>
+<p><strong>Phoenixes</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5472539/16Xgxh">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472539" alt="5472539"></a>
+<a href="http://valleyofunicorns.com/Horse/5472852/92Xk58">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472852" alt="5472852"></a>
+<a href="http://valleyofunicorns.com/Horse/5472791/W9Y8nc">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472791" alt="5472791"></a>
+<a href="http://valleyofunicorns.com/Horse/5472258/zVixYE">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472258" alt="5472258"></a>
+<a href="http://valleyofunicorns.com/Horse/5472325/Jj78Lz">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472325" alt="5472325"></a>
+<a href="http://valleyofunicorns.com/Horse/5472254/HEHYsp">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472254" alt="5472254"></a>
+</p><br>
+<p><strong>Infernettes'</strong><br>
+<a href="http://valleyofunicorns.com/Horse/5469571/n1Kc6B">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469571" alt="5469571"></a>
+<a href="http://valleyofunicorns.com/Horse/5469572/qzM3yX">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469572" alt="5469572"></a>
+<a href="http://valleyofunicorns.com/Horse/5469560/G1ft2k">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469560" alt="5469560"></a>
+<a href="http://valleyofunicorns.com/Horse/5469557/4NK5Lk">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469557" alt="5469557"></a>
+<a href="http://valleyofunicorns.com/Horse/5469564/MstZJQ">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469564" alt="5469564"></a>
+<a href="http://valleyofunicorns.com/Horse/5469567/pwQI9L">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469567" alt="5469567"></a>
+<a href="http://valleyofunicorns.com/Horse/5472238/9r60o9">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5472238" alt="5472238"></a>
+<a href="http://valleyofunicorns.com/Horse/5469604/JZRABl">
+<img src="http://valleyofunicorns.com/Horse/thumbs/5469604" alt="5469604"></a>
+</p></div>
   </div>
 </div>
 <div class="footer">
