--- a/treasurebox/general.html
+++ b/treasurebox/general.html
@@ -133,9 +133,9 @@ a {
     </ul><br>
     <p style="color: darkgreen"><strong>Rotated Outcomes</strong></p>
     <ul class="green">
-    <li>June 10th - ???</li>
-    </ul>
-    <center><img src="http://valleyofunicorns.com/images/horse_images/617.png" alt="Here is a Morning Glory Paae."></center><br><br>
+    <li><a href="/treasurebox/june10.html">June 10th - ???</a></li>
+    </ul><br>
+    <center><img src="http://valleyofunicorns.com/images/horse_images/10018.png" alt="Here is a Cryo Crystal Alicorn."></center><br><br>
   </div>
   <div class="main">
     <div class= "border">
