--- a/treasurebox/june10.html
+++ b/treasurebox/june10.html
@@ -127,7 +127,7 @@ a {
   <div class="side">
     <p class= "green"><a href="/guides.html">< Back</a></p>
     <h2 style="color: green">Treasure Boxes</h2>
-    <p style="color: darkgreen"><strong>General</strong></p>https://www.w3schools.com/guides.html
+    <p style="color: darkgreen"><strong>General</strong></p>
     <ul class="green">
     <li><a href="/treasurebox/general.html">Treasure Box (+Outcomes)</a></li>
     </ul><br>
