--- a/treasurebox/june10.html
+++ b/treasurebox/june10.html
@@ -133,7 +133,7 @@ a {
     </ul><br>
     <p style="color: darkgreen"><strong>Rotated Outcomes</strong></p>
     <ul class="green">
-    <li>June 10th - ???</li>
+    <li>June 10th - CURRENT</li>
     </ul>
     <center><img src="http://valleyofunicorns.com/images/horse_images/617.png" alt="Here is a Morning Glory Paae."></center><br><br>
   </div>
