--- a/treasurebox/june10.html
+++ b/treasurebox/june10.html
@@ -131,7 +131,7 @@ a {
     <ul class="green">
     <li><a href="/treasurebox/general.html">Treasure Box (+Outcomes)</a></li>
     </ul><br>
-    <p style="color: darkgreen"><strong>Rotated Outcomes</strong></p>
+    <p style="color: darkgreen"><strong>Outcomes</strong></p>
     <ul class="green">
     <li>June 10th - CURRENT</li>
     </ul>
