--- a/treasurebox/june10.html
+++ b/treasurebox/june10.html
@@ -129,13 +129,13 @@ a {
     <h2 style="color: green">Treasure Boxes</h2>
     <p style="color: darkgreen"><strong>General</strong></p>
     <ul class="green">
-    <li><a href="/treasurebox/general.html">Treasure Box (+Outcomes)</a></li>
+    <li><a href="/treasurebox/general.html">Treasure Box</a></li>
     </ul><br>
     <p style="color: darkgreen"><strong>Outcomes</strong></p>
     <ul class="green">
     <li>June 10th - CURRENT</li>
     </ul>
-    <center><img src="http://valleyofunicorns.com/images/horse_images/617.png" alt="Here is a Morning Glory Paae."></center><br><br>
+    <center><img src="http://www.valleyofunicorns.com/images/horse_images/10038.png" alt="Here is a Kiwi Phoenix. Isn't he just beautiful?."></center><br><br>
   </div>
   <div class="main">
     <div class= "border">
