--- a/treasurebox/general.html
+++ b/treasurebox/general.html
@@ -129,7 +129,7 @@ a {
     <h2 style="color: green">Treasure Boxes</h2>
     <p style="color: darkgreen"><strong>General</strong></p>
     <ul class="green">
-    <li><a href="/treasurebox/general.html">Treasure Box</a></li>
+    <li>Treasure Box</li>
     </ul><br>
     <p style="color: darkgreen"><strong>Outcomes</strong></p>
     <ul class="green">
