--- a/guides.html
+++ b/guides.html
@@ -129,7 +129,8 @@ a {
     <h2 style="color: green">A list of Guides</h2>
     <p style="color: darkgreen"><strong>Features</strong></p>
     <ul class="green">
-    <li><a href="/treasurebox/general.html">Treasure Box (+Outcomes)</a></li>
+      <li><a href="">Species List + Growth Rates</a></li>
+      <li><a href="/treasurebox/general.html">Treasure Box (+Outcomes)</a></li>
     </ul><br>
     <p style="color: darkgreen"><strong>Events</strong></p>
     <ul class="green">
