--- a/guides/species.html
+++ b/guides/species.html
@@ -1,1 +1,149 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>DragonVale2133 | Outcomes: June 10th</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
+/* Style the body */
+body {
+    font-family: Arial;
+    margin: 0;
+}
+.header {
+    padding: 30px;
+    text-align: left;
+    background: DarkSeaGreen;
+    color: white;
+}
+/* Increase the font size of the heading */
+.header h1 {
+    font-size: 40px;
+}
+/* Style the top navigation bar */
+.navbar {
+    overflow: hidden;
+    background-color: DarkGreen;
+}
+/* Style the navigation bar links */
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+/* Right-aligned link */
+.navbar a.right {
+    float: right;
+}
+/* Change color on hover */
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+/* Column container */
+.row {  
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+}
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column */
+.side {
+    -ms-flex: 35%; /* IE10 */
+    flex: 5%;
+    background-color: #e1efe4;
+    padding: 20px;
+    border-right: 5px solid #e1efe4;
+}
+/* Main column */
+.main {   
+    -ms-flex: 65%; /* IE10 */
+    flex: 55%;
+    background-color: white;
+    padding: 20px;
+}
+.footer {
+    padding: 10px; /* Some padding */
+    text-align: center; /* Center text*/
+    background: DarkSeaGreen; /* Grey background */
+    color: white;
+}
+.profile {
+  float: right;
+  position: relative;
+  bottom: 30px;
+  left: 5px;
+}
+.border {
+  border-bottom: 3px solid white; 
+  padding-bottom: 20px; 
+  min-height: 200px
+}
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+    .row {   
+        flex-direction: column;
+    }
+}
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+    .navbar a {
+        float: none;
+        width: 100%;
+    }
+}
+.idk_lol {
+  float: right; 
+  position: relative;
+  bottom: 15px;
+  }
+.normal {
+}
+a {
+  text-decoration: none;
+}
+.green a {
+  color: green;
+    }
+</style>
+</head>
+<body>
+<div class="header">
+  <h1><a href ="http://www.valleyofunicorns.com/Player/17640/" target="_blank"><img src="http://avatars.valleyofunicorns.com/17640_avatar.png" class="profile"></a><a href="/index.html" style="color: white;">DragonVale2133</a></h1>
+</div>
+<div class="navbar">
+  <a href="/Explore.html">Explore</a>
+  <a href="/guides.html">Guides</a>
+  <a href="/blog.html">Blog</a>
+  </div>
+<div class="row">
+  <div class="side">
+    <p class= "green"><a href="/guides.html">< Back</a></p>
+    <h2 style="color: green">Species List</h2>
+    <ul class="green">
+    <li><a href="/guides/species_norms.html">Equine Species</a></li>
+    <li><a href="/treasurebox/species_others.html">Others</a></li>
+    </ul><br>
+    <center><img src="http://www.upl.co/uploads/15339441ad1529078473.png" alt="Here is an immature Feathered Serpent."></center><br><br>
+  </div>
+  <div class="main">
+    <div class= "border">
+      <h2>Species List</h2>
+      <p>I've divided the list into two pages because one page with every single one of those creatures would make it too long.<br><br>
+      The Equine list includes the default species (Unicorn, Pegasus, Alicorn, Spring Fairy, ...), the ones that hatch at level 75 and grow up at level 150. Non-equines grow up at drastically different rates, so I made a separate page for those.
+      </p>
+</div>
+  </div>
+</div>
+<div class="footer">
+  <p>I do not own any of the images. All images belong to the owners of valleyofunicorns.com.
+</div>
+</body>
+</html>
