--- a/guides/species.html
+++ b/guides/species.html
@@ -128,8 +128,8 @@ a {
     <p class= "green"><a href="/guides.html">< Back</a></p>
     <h2 style="color: green">Species List</h2>
     <ul class="green">
-    <li><a href="/guides/species_norms.html">Equine Species</a></li>
-    <li><a href="/guides/species_others.html">Others</a></li>
+    <li><a href="/guides/species/equines.html">Equine Species</a></li>
+    <li><a href="/guides/species/others.html">Others</a></li>
     </ul><br>
     <center><img src="http://www.upl.co/uploads/15339441ad1529078473.png" alt="Here is an immature Feathered Serpent."></center><br><br>
   </div>
