--- a/guides/species/equines.html
+++ b/guides/species/equines.html
@@ -168,7 +168,7 @@ a {
       One of the three same-sex species of the Valley. Due to them all being mares, they cannot breed. Fakiecorns from the Anniversary event can have different party hats and blowers, while Ebil Fakies may have different headgear like candles.<br>
       <img width="200px" src="http://horses.valleyofunicorns.com/3384565.png">
       <img width="200px" src="http://horses.valleyofunicorns.com/3963181.png"><br><br>
-     </p>
+        </p></div>
   </div>
 </div>
 <div class="footer">
